# Smartmouse_2018

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  configure  generate_pch.sh  platformio.ini
console/: CMakeLists.txt  ConsoleMaze.cpp  ConsoleMaze.h  ConsoleMouse.cpp  ConsoleMouse.h  ConsoleTimer.cpp  ConsoleTimer.h  WinGetOpt.cpp  WinGetOpt.h
console/commands/: Calibrate.cpp  Calibrate.h  Finish.cpp  Finish.h  Forward.cpp  Forward.h  ForwardN.cpp  ForwardN.h  SolveMaze.cpp  SolveMaze.h  StepSolveCommand.cpp  StepSolveCommand.h  StepSolveMaze.cpp  StepSolveMaze.h  Stop.cpp  Stop.h  Turn.cpp  Turn.h  WaitForStart.cpp  WaitForStart.h
console/main/: Animate.cpp  ConsoleNavTest.cpp  ConsoleSolve.cpp  GenerateMaze.cpp  ReadAndPrint.cpp  Solve.cpp  StepSolve.cpp
console/test/: Test.cpp
gzmaze/: CMakeLists.txt  gzmaze.world
gzmaze/models/mouse/: body.stl  model.sdf
gzmaze/src/: MazeFactory.cc
real/: ArduinoTimer.cpp  ArduinoTimer.h  CMakeLists.txt  EEPROMModel.cpp  EEPROMModel.h  RealMouse.cpp  RealMouse.h  doc.h  dummy_main.cpp  main.cpp
real/commands/: ArcTurn.cpp  ArcTurn.h  Backup.cpp  Backup.h  BatteryMonitor.cpp  BatteryMonitor.h  Calibrate.cpp  Calibrate.h  DumbArcTurn.cpp  DumbArcTurn.h  End.cpp  End.h  Finish.cpp  Finish.h  Forward.cpp  Forward.h  ForwardN.cpp  ForwardN.h  ForwardToCenter.cpp  ForwardToCenter.h  ForwardToDiagonal.cpp  ForwardToDiagonal.h  LEDBlink.cpp  LEDBlink.h  MeasureMazeOrientation.cpp  MeasureMazeOrientation.h  SolveMaze.cpp  SolveMaze.h  Stop.cpp  Stop.h  Turn.cpp  Turn.h  TurnInPlace.cpp  TurnInPlace.h  WaitForStart.cpp  WaitForStart.h  WaitThenDrive.cpp  WaitThenDrive.h  WallSmash.cpp  WallSmash.h
real/lib/AS5048A/: AS5048A.cpp  AS5048A.h
real/lib/Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  gfxfont.h  glcdfont.c
real/lib/Adafruit-GFX-Library/Fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  (+9 more)
real/lib/Adafruit_BNO055/: Adafruit_BNO055.cpp  Adafruit_BNO055.h
real/lib/Adafruit_BNO055/utility/: matrix.h  quaternion.h  vector.h
real/lib/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
real/lib/Adafruit_Sensor/: Adafruit_Sensor.h
real/lib/Encoder/: Encoder.cpp  Encoder.h  library.json
real/lib/Encoder/utility/: direct_pin_read.h  interrupt_config.h  interrupt_pins.h
real/lib/KinematicMotorController/: KinematicController.cpp  Pose.cpp  RegulatedMotor.cpp  RegulatedMotor.h
real/lib/vl6180x-arduino/: VL6180X.cpp  VL6180X.h
real/main/: analog_test.cpp  as5048a_test.cpp  dummy_main.ino  eigen_test.cpp  execute_velocity_profile.cpp  main.cpp  main.ino  main_development.cpp  measure_analog_curves.cpp  measure_motor_curve.cpp  measure_motor_response.cpp  measure_w_freq_res_changes.cpp  motor_and_battery_test.cpp  profile_encoders.cpp  test_everything.cpp  test_localization.cpp
sim/: BinaryIR.cc  CMakeLists.txt  Encoder.cpp  Encoder.h  LinkPlot3DPlugin.cc  MazeFactory.cc  MazeFactory.hh  MousePlugin.cc  MousePlugin.hh  RegenerateWidget.cc  RegenerateWidget.hh  SensorViz.cc  SensorViz.hh  SimMouse.cpp  SimMouse.h  SimTimer.cpp  SimTimer.h  StateViz.cc  StateViz.hh  WallFollower.cpp  WallFollower.h  fwd_kinematics.py  gazebo_pch.in  gzmaze.world  scripted_robot.world  setup.sh
sim/commands/: AlignYaw.cpp  AlignYaw.h  ArcTurn.cpp  ArcTurn.h  Calibrate.cpp  Calibrate.h  DumbArcTurn.cpp  DumbArcTurn.h  Finish.cpp  Finish.h  Forward.cpp  Forward.h  ForwardN.cpp  ForwardN.h  ForwardToCenter.cpp  ForwardToCenter.h  ForwardToDiagonal.cpp  ForwardToDiagonal.h  SolveMaze.cpp  SolveMaze.h  Stop.cpp  Stop.h  Turn.cpp  Turn.h  TurnInPlace.cpp  TurnInPlace.h  WaitForStart.cpp  WaitForStart.h
sim/joystick/: joystick.cc  joystick.hh  test.cc
sim/lib/: SimMouse.cpp  SimMouse.h  SimTimer.cpp  SimTimer.h  Time.cpp
sim/main/: PIDTuning.cpp  SimNavTest.cpp  SimSolve.cpp  SimStepSolve.cpp  VelocityControlTest.cpp  eigen_test.cpp
sim/models/mouse/: model.sdf
sim/msgs/: CMakeLists.txt  gui_actions.proto  maze_location.proto  msgs.h  state.proto
sim/plugins/: AnalogIR.cc  BinaryIR.hh  FastSimTimePub.cc  LinkPlot3DPlugin.cc  LinkPlot3DPlugin.hh  MazeFactory.cc  MazeFactory.hh  MousePlugin.cc  MousePlugin.hh  RegenerateWidget.cc  RegenerateWidget.hh  SensorViz.cc  SensorViz.hh  StateViz.cc  StateViz.hh  StateWidget.cc
sim/simulator/: CMakeLists.txt  README.md  SmartmouseSim.cpp  main.cpp  main.h  mainwindow.ui  simulator.qrc  style.qss
sim/simulator/lib/: Client.cpp  Client.h  Server.cpp  Server.h  Time.cpp  Time.h  TopicNames.h  mainwindow.ui
sim/simulator/lib/common/: RayTracing.cpp  (+3 more)
sim/simulator/msgs/: CMakeLists.txt  debug_state.proto  direction.proto  gui_actions.proto  internal_physics_state.proto  maze.proto  maze_location.proto  msgs.cpp  msgs.h  physics_config.proto  pid_constants.proto  pid_debug.proto  robot_command.proto  robot_description.proto  robot_sim_state.proto  robot_ui_state.proto  row_col.proto  row_col_theta.proto  row_col_yaw.proto  server_control.proto  state.proto  world_statistics.proto  xytheta.proto
sim/simulator/src/: TopicNames.h  main.cpp  main.h
sim/simulator/test/: SimTest.cpp  Test.cpp
sim/tools/: joystick_teleop.cpp  keyboard_teleop.cpp  pub_data.cpp  pub_speeds.cpp  time_test.cpp
(+5230 files in other folders)
